unpackaged/main/default/objects/Category_Assist__c/Category_Assist__c.object-meta.xml
<CustomObject>
    <description>Category Assist object as child of Assisted Sales and Product Sub Department</description>
    <label>Category Assist</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Category Assist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Assists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>