unpackaged/main/default/objects/Category_Assist__c/fields/Assisted_Sale__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Sale__c</fullName>
    <description>Assisted sale the category is being associated to.</description>
    <label>Assisted Sale</label>
    <referenceTo>Assisted_Sales__c</referenceTo>
    <relationshipLabel>Category Assists</relationshipLabel>
    <relationshipName>Category_Assists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>