unpackaged/main/default/objects/Category_Assist__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Sub department category selected for association.</description>
    <label>Category</label>
    <referenceTo>Product_Sub_Department__c</referenceTo>
    <relationshipLabel>Category Assists</relationshipLabel>
    <relationshipName>Category_Assists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>