unpackaged/main/default/objects/Category_Assist__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of association.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>