unpackaged/main/default/objects/Category_Assist__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of association.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>